--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jack Feen
 
-logo: JackFeen.github.io/assets/DSC07744.jpg
+logo: https://JackFeen.github.io/assets/DSC07744.jpg
 
 theme: jekyll-theme-minimal
