--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Jack Feen
 
 logo: https://JackFeen.github.io/assets/DSC07744.jpg
+<img src="https://JackFeen.github.io/assets/DSC07744.jpg" width="150" />
 
 theme: jekyll-theme-minimal
