--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: Jack Feen
+title: Professional Portfolio
 
-logo: https://JackFeen.github.io/assets/DSC07744.jpg
-<img src="https://JackFeen.github.io/assets/DSC07744.jpg" width="100" />
+logo: <img src="https://JackFeen.github.io/assets/DSC07744.jpg" width="100" />
 
 theme: jekyll-theme-minimal
