--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Professional Portfolio
+title: Jack Feen
 
-logo: <img src="https://JackFeen.github.io/assets/DSC07744.jpg" width="100" />
+logo: https://JackFeen.github.io/assets/DSC07744.jpg
 
 theme: jekyll-theme-minimal
