--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Jack Feen
 
 logo: https://JackFeen.github.io/assets/DSC07744.jpg
-
+description: linkedin.com/in/jackafeen
+description: github.com/JackFeen
 theme: jekyll-theme-minimal
