--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jack Feen
 
 logo: https://JackFeen.github.io/assets/DSC07744.jpg
-description: Connect with me on LinkedIn! - https://www.linkedin.com/in/jackafeen
+description: Connect with me on LinkedIn! www.linkedin.com/in/jackafeen
 theme: jekyll-theme-minimal
